website and architecture diagram update

--- a/website/hugo.production.yaml
+++ b/website/hugo.production.yaml
@@ -1,5 +1,5 @@
 ---
-title: "Smart IoT Health Monitoring Wearable System"
+title: "SH+™ - Smart Healthcare Plus"
 baseURL: "https://raidantimosquitos.github.io/cf-iot-spring-25-project"
 theme: "zen"
 languageCode: "en-US"
