--- a/website/hugo.yaml
+++ b/website/hugo.yaml
@@ -1,5 +1,5 @@
 ---
-title: "Smart IoT Health Monitoring Wearable System"
+title: "SH+™ - Smart Healthcare Plus"
 baseURL: "https://localhost:1313/website/"
 theme: "zen"
 languageCode: "en-US"
